[package]
name = "libc-strftime"
version = "0.2.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
license = "MIT"
edition = "2018"
description = "A wrapper library for the glibc strftime function"
repository = "https://github.com/cecton/libc-strftime"
homepage = "https://github.com/cecton/libc-strftime"
documentation = "https://docs.rs/libc-strftime"
readme = "README.md"
keywords = ["libc", "strftime", "calendar", "glibc"]
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "cecton/libc-strftime" }
is-it-maintained-issue-resolution = { repository = "cecton/libc-strftime" }
is-it-maintained-open-issues = { repository = "cecton/libc-strftime" }
maintenance = { status = "passively-developed" }

[dependencies]
libc = "0.2"
